bases/managers/muxarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muxarr
spec:
  type: LoadBalancer
  selector:
    app: muxarr
  ports:
    - name: tcp
      protocol: TCP
      port: 8183
      targetPort: 8183
      nodePort: 30183
