bases/managers/muxarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: muxarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mux.reynn.dev`)
      kind: Rule
      services:
        - name: muxarr
          port: 8183
      middlewares:
        - name: redirect-to-https
  tls:
    secretName: reynn-dev-ssl
